...
                                                <rect key="frame" x="137" y="60" width="100" height="128"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="100" id="Fmy-tc-mSe"/>
                                                    <constraint firstAttribute="height" constant="128" id="sum-X3-DrY"/>
                                                </constraints>
                                            </imageView>
                                            <textField clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DDP-Op-EEe" customClass="TextField" customModule="PicShare" customModuleProvider="ta
                                                <rect key="frame" x="47" y="218" width="280" height="40"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="280" id="BIk-qS-9pd"/>
                                                    <constraint firstAttribute="height" constant="40" id="yPX-Sf-fmi"/>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                                <connections>
                                                    <outlet property="delegate" destination="pDL-Be-YlO" id="wUU-8c-r35"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="04P-b3-mFO" customClass="TextField" customModule="PicShare" customModuleProvider="target">
                                                <rect key="frame" x="47" y="258" width="280" height="40"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="OLb-JG-lbu"/>
                                                    <constraint firstAttribute="width" constant="280" id="ZU4-GB-lsu"/>
                                                </constraints>
...
                                                <color key="backgroundColor" red="0.16069044143436384" green="0.70928813949115821" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="280" id="Qmp-n0-uRe"/>
                                                    <constraint firstAttribute="height" constant="40" id="xso-bz-V8m"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                                <state key="normal" title="Log In">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <action selector="loginSubmitButton:" destination="pDL-Be-YlO" eventType="touchUpInside" id="Ljz-Bl-uYT"/>
                                                </connections>
                                            </button>
...
